# UltraSinger

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ReleaseNotes.md  Settings.py  UltraSinger.py  docker-compose.yml  multistage.Dockerfile  pyproject.toml  requirements-linux.txt  requirements-macos.txt  requirements-windows.txt  requirements.in  requirements.txt  run_on_linux.sh  run_on_mac.command  run_on_windows.bat  setup.cfg
.github/: FUNDING.yml
.github/workflows/: build-container-image.yml  docker.yml  main.yml  pylint.yml  pytest.yml  release.yml
colab/: UltraSinger.ipynb
container/: README.md  compose-gpu.yml  docker.md  podman.md
docker-compose/NonGPU/: docker-compose.yml
docker-compose/NonGPU/output/: .dontremove
docker-compose/Nvidia/: docker-compose.yml
evaluation/: README.md
evaluation/input/config/: example.local.py
install/: fix_cuda11_libs.bat  fix_cudnn8.bat
install/CPU/: linux_cpu.sh  macos_cpu.sh  windows_cpu.bat
install/CUDA/: linux_cuda_gpu.sh  windows_cuda_gpu.bat
modules/: Log.py  console_colors.py  csv_export.py  musicbrainz_client.py  os_helper.py
modules/Audio/: convert_audio.py  denoise.py  separation.py  silence_processing.py  vocal_chunks.py  youtube.py
modules/DeviceDetection/: device_detection.py
modules/Midi/: midi_creator.py
modules/Pitcher/: pitched_data.py  pitcher.py
modules/Speech_Recognition/: TranscribedData.py  Vosk.py  Whisper.py  hyphenation.py  speech_recognition.py
modules/Ultrastar/: ultrastar_converter.py  ultrastar_parser.py  ultrastar_score_calculator.py  ultrastar_txt.py  ultrastar_writer.py
moduls/: Log.py  os_helper.py
moduls/Audio/: denoise.py  separation.py  vocal_chunks.py  youtube.py
moduls/DeviceDetection/: device_detection.py
moduls/Midi/: midi_creator.py
moduls/Pitcher/: pitcher.py
moduls/Speech_Recognition/: TranscribedData.py  Vosk.py  VoskTranscribedData.py  Whisper.py  hyphenate.py  hyphenation.py  speech_recognition.py
moduls/Ultrastar/: Points.py  ultrastar_converter.py  ultrastar_parser.py  ultrastar_score_calculator.py  ultrastar_txt.py  ultrastar_writer.py
pytest/: test_UltraSinger.py  test_syllable_split.py
pytest/modules/: UltraSinger.py  test_musicbrainz_client.py
pytest/modules/Audio/: test_bpm.py  test_denoise.py  test_onset_correction.py  test_silence_processing.py  test_vocal_gap_fill.py  test_youtube.py
pytest/modules/Image/: test_image_helper.py
pytest/modules/Midi/: helper.py  test_Midi.py  test_midi_creator.py
pytest/modules/Pitcher/: test_pitcher.py
pytest/modules/Speech_Recognition/: test_Whisper.py  test_hyphenation.py  test_llm_corrector.py
pytest/modules/UltraStar/: test_ultrastar_converter.py  test_ultrastar_parser.py  test_ultrastar_writer.py
pytest/tools/: test_compare_ultrastar.py
src/: Settings.py  UltraSinger.py  UltraSingerEvaluation.py  UltraSingerMetaEvaluation.py
src/modules/: ProcessData.py  common_print.py  console_colors.py  csv_handler.py  ffmpeg_helper.py  help_print.py  init_interactive_mode.py  musicbrainz_client.py  os_helper.py  plot.py  sheet.py  timer.py
src/modules/Audio/: bpm.py  convert_audio.py  denoise.py  key_detector.py  onset_correction.py  separation.py  silence_processing.py  vocal_chunks.py  vocal_gap_fill.py  youtube.py
src/modules/DeviceDetection/: device_detection.py
src/modules/Evaluation/: TestRun.py
src/modules/Midi/: MidiSegment.py  (+2 more)
tools/: compare_ultrastar.py  convert_audio_format.py  fix_ultrastar_compatibility.py  portableMP3.md  portableMP3.py  sweet_mixer.md  sweet_mixer.py  sweet_mixer.sh  sweet_mixer.txt
webapp/: README_WEBAPP.md
webapp/backend/: main.py  requirements.txt
webapp/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
webapp/frontend/: index.html  package.json  tailwind.config.js  vite.config.js
(+47 files in other folders)
