[metadata]
name = UltraSinger
version = 0.0.1
description = AI based tool to convert vocals lyrics and pitch from music to autogenerate Ultrastar, Midi and notes. It automatic tapping, adding text, pitch vocals and creates karaoke files.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/rakuri255/UltraSinger

[options]
python_requires = ==3.10.*
packages = find:
package_dir =
    =src
install_requires =
    crepe==0.0.13
    librosa==0.9.2
    pretty_midi~=0.2.10
    pydub==0.25.1
    Levenshtein~=0.21.0
    scipy~=1.10.1
    vosk==0.3.44
    tensorflow~=2.12.0
    matplotlib~=3.7.1
    yt_dlp~=2023.3.4
    numpy~=1.23.5
    git+https://github.com/m-bain/whisperx.git
    PyHyphen~=4.0.3
    demucs~=4.0.0
    tqdm~=4.65.0
    langcodes~=3.3.0
    language-data~=1.1
    Pillow~=9.5.0
    isort==5.12
    black==23.3
    pylint==2.17
    pytest~=7.3.1

[options.packages.find]
where = src